--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<meta name="keywords" content="randpics,imgur,random imgur,randomizer,reddit,randimg,random pics,random images,bored">
+	<meta name="keywords" content="imgur,random imgur,randomizer,randpics,nsfw,reddit,randimg,infinite imgur,random pics,random images,bored">
 	<title>Random Imgur Generator</title>
 	<meta name="Description" content="Generate imgur images randomly">
 	<script type='text/javascript' src='https://code.jquery.com/jquery-1.11.1.js'></script>
