--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<meta name="keywords" content="imgur,random imgur,randomizer,randpics,nsfw,reddit,randimg,infinite imgur,random pics,random images,bored">
+	<meta name="keywords" content="random,random image,random picture,random pictures,imgur,random imgur,randomizer,randpics,nsfw,reddit,randimg,infinite imgur,random pics,random images,bored">
 	<title>Random Imgur Generator</title>
 	<meta name="Description" content="Generate imgur images randomly">
 	<script type='text/javascript' src='https://code.jquery.com/jquery-1.11.1.js'></script>
@@ -57,10 +57,13 @@ $(document).ready(function() {
 			$("#controls").css( "opacity", "0");
 			// fade out the instructions
 			$("#instructions").css( "opacity", "0");
-			// hide the controls and instructions on a delay
+			// fade out the privacy policy
+			$("#privacy").css( "opacity", "0");
+			// hide the controls, instructions and privacy footnote on a delay
 			window.setTimeout( function () {
 				$("#controls").css('display', 'none');
 				$("#instructions").css('display', 'none');
+				$("#privacy").css('display', 'none');
 			}, 750);
 			// unhide the images
 			$("#images").css( showstyle );
@@ -316,6 +319,15 @@ $(document).ready(function() {
 		//tell the googles
 		ga('send', 'event', 'Clicked image');
 	});
+	$( "body" ).on( "click", "#privacy", function () {
+	
+		$("#privacy").css('width', '30em');
+		$("#privacy").html('This site uses Google Analytics to provide broad metrics to better \
+understand what features are important to its users.  \
+Examples include image size selection and whether or not autoscroll is used. \
+The operator of this site will not sell or share this information with any undisclosed parties.  \
+By use of this site, you express consent to this tracking.');
+	});
 });
 
 </script></head>
@@ -334,6 +346,9 @@ feed me random
 </div>
 <span id="disclaimer">
 By using this service, you agree to <a href="https://imgur.com/removalrequest/">report</a> anything that violates Imgur's <a href="https://imgur.com/tos">TOS</a>
+</span>
+<span id="privacy">
+click to view privacy policy
 </span>
 <span id="size">
 image size: <a href="#">small</a> <a href="#">medium</a> <a href="#">large</a>
