minor change to metadata

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="keywords" content="random,random image,random picture,random pictures,imgur,random imgur,randomizer,randpics,nsfw,reddit,randimg,infinite imgur,random pics,random images,bored">
 	<title>Random Imgur Generator</title>
-	<meta name="Description" content="Generate imgur images randomly">
+	<meta name="description" content="Infinitely scrolling imgur images">
 	<script type='text/javascript' src='https://code.jquery.com/jquery-1.11.1.js'></script>
 	<script type='text/javascript' src='analytics.js'></script>
 	<link rel="stylesheet" type="text/css" href="style.css" />
