minor change to comment

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ $(document).ready(function() {
 	//check if mobile device for additional controls
 	var ismobile = (/iPhone|iPod|iPad|Android|BlackBerry/).test(navigator.userAgent);
 	
-	// style to show controls
+	// css style to use when we want to unhide controls
 	var showstyle = {
 		display : "block",
 		opacity : "1"
